--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf ../paw2door/build && react-scripts build && cp -r build ../paw2door/build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
